fix: Allow external icon to truncate with link text

--- a/src/icon/styles.scss
+++ b/src/icon/styles.scss
@@ -16,6 +16,10 @@
     align-items: center;
   }
 
+  &.inline {
+    display: inline;
+  }
+
   /* stylelint-disable-next-line selector-max-type */
   > svg {
     // SVG is focusable by default
